# BluetoothQtAppForWayland

./: CMakeLists.txt  CMakePresets.json
resources/: icons.qrc
src/: bluetoothqt.h  bluetoothqt.ui  main.cpp
src/device/: device.cpp
src/ui/: bluetoothqt.cpp  bluetoothqt.h  bluetoothqt.ui
src/utils/device_scanner/: device_scanner.cpp  device_scanner.h
src/widgets/device_widget/: device_widget.cpp  device_widget.h
